<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_loading_gradient"
    tools:context=".ui.fragments.LoadingFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_pokeball"
        android:contentDescription="@string/app_logo_description" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/app_name_display"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/tagline"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:indeterminateTint="@color/white" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/loading_text"
        android:textColor="@color/white" />

</RelativeLayout>

